initial integration test infrastructure