@@ -1,19 +1,46 @@
+apply plugin: 'war'
+
+ext.jbossHome = hasProperty('jbossHome') ? jbossHome : "${rootDir}/wildfly-8.0.0.Final"
+
 repositories() {
-    flatDir {
-        dirs 'libs'
-    }
+    maven { url 'https://repository.jboss.org/nexus/content/groups/public-jboss' }
+    maven { url 'https://repository.jboss.org/nexus/content/repositories' }
+    maven { url 'https://repository.jboss.org/nexus/content/repositories/thirdparty-releases' }
+    mavenCentral()
 }
 
 dependencies {
-//    compile 'org.hibernate:hibernate-entitymanager:4.3.7.Final'
-//    compile 'org.apache.openjpa:openjpa-all:2.3.0'
-//    compile 'org.hibernate:hibernate-validator:4.3.1.Final'	// HIBERNATE VALIDATOR!!! Версия именно 4. С пятой глюки =)
-//    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+    compile project(':InternetBankingLibrary')
 
-    // WebSphere AS libs
-    //compile fileTree(dir: "C:\\Program Files (x86)\\IBM\\WID7_WTE\\runtimes\\bi_v7\\lib")
+    // WebSphere AS libs & arquillian-was-remote lib
+    providedCompile fileTree(dir: "/opt/IBM/WID7_WTE/runtimes/bi_v7/lib")
 
-    // Arquillian
-    //compile 'org.jboss.arquillian:arquillian-bom:1.1.5.Final'
-    compile files("C:\\arquillian-was-remote-7-1.0.0.Final-SNAPSHOT.jar")
+//    compile 'org.wildfly:wildfly-spec-api:8.2.0.Final'
+    testCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-depchain:2.1.0'
+    testCompile 'org.jboss.arquillian:arquillian-bom:1.1.2.Final-wildfly-1'
+    testCompile 'org.jboss.arquillian.junit:arquillian-junit-container:1.1.2.Final-wildfly-1'
+    testRuntime 'org.jboss.logging:jboss-logging:3.1.4.GA'
+
+    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'org.slf4j:slf4j-log4j12:1.7.7'
+
+    /**
+     * Embedded means it runs in the same JVM, it still needs the full installation
+     */
+    testRuntime 'org.wildfly:wildfly-arquillian-container-embedded:8.0.0.Final'
+}
+
+test {
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    /**
+     * Installation of JBOSS to use for testing, this can be set here
+     * or in the arquillian.xml.
+     */
+    environment 'JBOSS_HOME', '/opt/wildfly-8.2.0.Final'
+    /**
+     * WildFly embedded default logging
+     */
+    systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.LogManager'
+    //systemProperty 'java.util.logging.manager', 'org.apache.log4j.LogManager'
 }
